--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,97 +4,93 @@ This Template Is :
 Created By  : Rendi Bayu Setiawan
 Facebook	: https://facebook.com/aikarey1
 Github		: https://github.com/aikarey
+
+Tidy Up By  : Suluh Sulistiawan
+Github      : https://github.com/sProDev
 ======================================================
 */
 
-/*Login Form*/
-body
-{
+/* Login Form */
+body {
 	overflow: hidden;
 }
-.login-wrapper
-{
+
+.login-wrapper {
 	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	top: 0;
-	margin:auto;
-	width:800px;
+	margin: auto;
+	width: 800px;
 	height: 340px;
 	background-color: white;
-	
 }
-.login-wrapper#logout
-{
+
+.login-wrapper#logout {
 	height: 500px;
 	max-height: 600px;
 }
-.login-wrapper._stats
-{
+
+.login-wrapper._stats {
 	height: 400px !important;
 }
-.smk-bisa
-{
+
+.smk-bisa {
 	width: 370px;
 }
-#logo-bisa
-{
+
+#logo-bisa {
 	margin-left: -60px;
 }
-.sapaan
-{
+
+.sapaan {
 	font-size: 27px;
 	font-weight: 400;
 	position: absolute;
 	font-family: sans-serif;
 	color: #2196F3 !important;
 }
-.login-form
-{
-	margin:50px;
 
-
-}
-#login
-{
-	
+.login-form {
+	margin: 50px;
 }
 
-.login-logo
-{
-	margin-top: -140px;
-	width: 130px;	 	
-	height: 130px;
+.login-logo {
+	margin-top: -110px;
+	width: 100%;
+	max-width: 100px;
+	height: auto;
 }
-	#logout #stats-logo
-	{
-		width: 130px;
-		height: 130px;	
-		margin-top: -110px;
-	}
 
-.login-form .form-control
-{
+#logout #stats-logo {
+	width: 100%;
+	max-width: 100px;
+	height: auto;
+	margin-top: -100px;
+	margin-bottom: .8rem;
+}
+
+.login-form .form-control {
 	transition: .5s;
 	background-color: #343a55;
-	border:none;
+	border: 1px solid #343a55;
 }
-.login-form .form-control:focus
-{
+
+.login-form .form-control:focus {
 	transition: .5s;
-  	box-shadow: 0 0 0 1px #343a55;
+	box-shadow: none;
 	background-color: white !important;
 }
-.login-form .placeholder
-{
+
+.login-form .placeholder {
 	position: absolute;
 	margin-left: 50px;
 	margin-top: 6px;
 	transition: .5s;
 }
-.login-form .placeholder.active
-{
+
+.login-form .placeholder.active {
 	transition: .5s;
 	position: absolute;
 	z-index: 10;
@@ -102,35 +98,31 @@ body
 	transform: translate(0,-25px);
 }
 
-.login-form .input-group-text
-{
-
-	border:none;
+.login-form .input-group-text {
+	border: none;
 	color: white;
 	background-color: #343a55;
 }
 
-.login-wrapper#status
-{
+.login-wrapper#status {
 	max-height: 400px;
-
 }
-/*end of login form*/
-/* loader*/
-.load-wrapper
-{
+/* End of Login Form */
+
+/* Loader */
+.load-wrapper {
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background-color:  #10cfbd;;
-	z-index: 99999;
+	background-color: #10cfbd;
+	;z-index: 99999;
 }
-.loader
-{
+
+.loader {
 	transition: 1s;
 	width: 100px;
 	height: 100px;
-	border:10px solid white;
+	border: 10px solid white;
 	border-bottom-color: transparent;
 	border-radius: 50%;
 	position: absolute;
@@ -138,175 +130,167 @@ body
 	right: 0;
 	top: 0;
 	bottom: 0;
-	margin:auto;
+	margin: auto;
 	animation: loading 1s linear infinite;
 }
 
-td.content
-{
+/* td.content {
 	transition: .5s;
 	opacity: 0;
 	transform: translate(300px,0);
 }
-td
-{
+
+td {
 	transition: .5s;
 	opacity: 0;
 	transform: translate(-300px,0);
-}
+} */
 
-@keyframes anim
-{
-	0%{
+@keyframes anim {
+	0% {
 		transition: 1s;
 		opacity: 0;
 		transform: translate(300px,0);
 	}
-	50%
-	{
+
+	50% {
 		transition: 1s;
 		opacity: 1;
-		transform: translate(-70px,0);	
+		transform: translate(-70px,0);
 	}
-	100%
-	{
+
+	100% {
 		transition: 1s;
 		opacity: 1;
 		transform: translate(0,0);
 	}
 }
-@keyframes anim2
-{
-	0%{
+
+@keyframes anim2 {
+	0% {
 		transition: 1s;
 		opacity: 1;
 		transform: translate(-300px,0);
 	}
-	50%
-	{
-		transform: translate(70px,0);	
+
+	50% {
+		transform: translate(70px,0);
 	}
-	100%
-	{
+
+	100% {
 		transform: translate(0,0);
 	}
 }
-.load-wrapper.hide
-{
+
+.load-wrapper.hide {
 	transition: 2s;
 	transform: translate(0, -1000px);
 }
-@keyframes loading
-{
-	from{
+
+@keyframes loading {
+	from {
 		transform: rotate(0deg);
 	}
-	to{
+
+	to {
 		transform: rotate(360deg);
 	}
 }
 
-
-/*mobile*/
-@media (max-width: 760px)
-{
-
-	#tesa
-	{
+/* Mobile Style */
+@media (max-width: 760px) {
+	#tesa {
 		overflow-x: hidden;
 	}
-	/*login form*/
-	.loader
-	{
+
+	.loader {
 		width: 60px;
 		height: 60px;
 	}
 
-	.login-form .placeholder
-	{
-		margin-left:30px !important;
+	/* Login Form */
+	.login-form {
+		margin: 50px 20px;
 	}
-	.login-logo
-	{
-		width: 100px;
-		height: 100px;
-		margin-top: -120px;
+	.login-form .placeholder {
+		margin-left: 30px !important;
+	}
 
+	.login-logo {
+		margin-top: -100px;
+		width: 100%;
+		max-width: 100px;
+		height: auto;
 	}
-	#logout #stats-logo
-	{
-		height: 100px;
-		width: 100px;
+
+	#logout #stats-logo {
+		margin-top: -90px;
+		width: 100%;
+		max-width: 100px;
+		height: auto;
 	}
-	.login-wrapper
-	{
-		height: 500px;
-		max-height: 600px;
+
+	.login-wrapper {
+		height: 450px;
+		/* max-height: 600px; */
 		max-width: 90%;
-
 		margin-top: 100px;
-
 	}
-	.login-wrapper#status
-	{
+
+	.login-wrapper#status {
 		margin-top: 60px;
 		height: 500px;
 		max-height: 500px;
 	}
-	.login-wrapper#logout
-	{
-		height: 560px;
+
+	.login-wrapper#logout {
+		height: 480px;
 		max-width: 90%;
 	}
-	.login-wrapper._stats
-	{
-		height: 500px !important;
-	}
-	table>tbody>tr>td
-	{
+
+	table>tbody>tr>td {
 		font-size: 13px;
 	}
-	.login-logo#stats-logo
-	{
+
+	.login-logo#stats-logo {
 		margin-top: -100px !important;
 		width: 90px;
 		height: 100px;
 	}
-	#logo-bisa
-	{
-		margin-left: 0;	
-		margin-top: -50px !important;
+
+	#logo-bisa {
+		/* margin-left: 0;
+		margin-top: -50px !important; */
+		display: none;
 	}
-	
-	.status-bisa#logo-bisa
-	{
+
+	.status-bisa#logo-bisa {
 		margin-top: 0 !important;
 		width: 90%;
 		margin-left: auto;
 	}
-	.login-form#stats
-	{
-		margin:50px 20px;
+
+	.login-form#stats {
+		margin: 50px 20px;
 	}
-	#status_form
-	{
+
+	#status_form {
 		overflow-x: hidden;
 	}
-#button2
-{
-	margin-top: 40px;
-}
-	.smk-bisa
-	{
+
+	#button2 {
+		margin-top: 40px;
+	}
+
+	.smk-bisa {
 		width: 93%;
 	}
-	#logout .smk-bisa
-	{
 
+	#logout .smk-bisa {
 		margin-top: -70px;
 	}
-	#logo-bisa p
-	{
+
+	#logo-bisa p {
 		display: none;
 	}
 }
